# horsetailpy

./: .gitignore  Dockerfile  LICENSE  README.md  horsetail.py  main.py  pyproject.toml  test.ipynb
.devcontainer/: devcontainer.json
src/: horsetail.py
