[tool.poetry]
package-mode = false
description = "Modeling horsetail movement"
authors = ["Ikumi Fujita <ikumi.fujita@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
pandas = "^2.2.3"
numpy = "^2.2.1"
scipy = "^1.14.1"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
ipykernel = "^6.29.5"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
