[tool.poetry]
package-mode = false
description = "Modeling horsetail movement"
authors = ["Ikumi Fujita <ikumi.fujita@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
numpy = "<2.1"
matplotlib = "^3.10.0"
llvmlite = "0.43.0"
numba = "^0.60.0"
joblib = "^1.4.2"
tqdm = "^4.67.1"
